src/tests/fixtures/comments/lineComment.invalid.ts.expected
-----------------
INPUT
----------------- 
// @gqlType
export default class Composer {
  // @gqlField
  url(): string {
    return `/composer/`;
  }
}

-----------------
OUTPUT
-----------------
-- Error Report --
src/tests/fixtures/comments/lineComment.invalid.ts:1:4 - error: Unexpected Grats tag in line (`//`) comment. Grats looks for tags in JSDoc-style block comments. e.g. `/** @gqlType */`. For more information see: https://grats.capt.dev/docs/getting-started/comment-syntax

1 // @gqlType
     ~~~~~~~~

src/tests/fixtures/comments/lineComment.invalid.ts:3:6 - error: Unexpected Grats tag in line (`//`) comment. Grats looks for tags in JSDoc-style block comments. e.g. `/** @gqlType */`. For more information see: https://grats.capt.dev/docs/getting-started/comment-syntax

3   // @gqlField
       ~~~~~~~~~


-- Code Action: "Convert to a docblock comment" (convert-line-comment-to-docblock-comment) --
- Original
+ Fixed

@@ -1,2 +1,2 @@
- // @gqlType
+ /** @gqlType */
  export default class Composer {
-- Code Action: "Convert to a docblock comment" (convert-line-comment-to-docblock-comment) --
- Original
+ Fixed

@@ -2,3 +2,3 @@
  export default class Composer {
-   // @gqlField
+   /** @gqlField */
    url(): string {